# sdk

./: .gitignore  README.md  publish.sh
go-sdk/: README.md  client.go  client_test.go  go.mod  result.go  result_test.go  upload.go  upload_test.go
go-sdk/examples/: main.go
js-sdk/: README.md  example.ts  jest.config.js  package-lock.json  package.json
js-sdk/src/: client.ts  result.ts  upload.ts
js-sdk/tests/: singlebase.test.ts
php-sdk/: README.md  composer.json  example.php  phpunit.xml
php-sdk/src/: Client.php  Result.php  Upload.php
php-sdk/tests/: ClientTest.php  ResultTest.php  UploadTest.php
python-sdk/: README.md  pyproject.toml
python-sdk/singlebase/: __init__.py  client.py  json_ext.py  result.py  upload.py
python-sdk/tests/: test_sdk.py
