[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "singlebase"
version = "1.0.0"
description = "Singlebase Python SDK"
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "Singlebase.ai", email = "singlebase@singlebase.ai" }
]
requires-python = ">=3.9"
keywords = ["singlebase", "sdk", "api", "baas"]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
]

dependencies = [
  "httpx>=0.27",
  "arrow>=1.3.0",
  "aiofiles>=23.2.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "respx>=0.20",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["singlebase*"]
